# PointOfSale

./: .coverage  .gitignore  Cash.py  Checkout.py  README.md  Receipt.py  demo.py  demo_output.txt  inventory.json  item.py  main.py  methods.py  pyproject.toml  sales.json  test_checkout.py
pointofsale/: Card.py  Cash.py  Checkout.py  Item.py  Receipt.py  __init__.py  methods.py
tests/: test_checkout.py  test_print_receipt.py  test_sales_data.py
